lang/tests/snapshots/semantic/impure_verify_in_where.snap
---
source: lang/tests/semantic.rs
---
error: impure construct `verify` in proto relation
   ╭─[ test.zippel:1:60 ]
   │
 1 │ proto p<F: Field>(instance a: F, instance b: F) where a == verify(b == b) { verify(a == a) }
   │                                                            ───────┬──────  
   │                                                                   ╰──────── `verify` is not allowed in a proto relation
   │                                                                   │        
   │                                                                   ╰──────── note: proto relations must be relation-pure (no challenge, log, or verify)
───╯
