lang/tests/snapshots/semantic/proto_without_verify.snap
---
source: lang/tests/semantic.rs
---
error: proto `p` has no `verify` check
   ╭─[ test.zippel:1:7 ]
   │
 1 │ proto p<F: Field>(instance a: F) where a == a { let b = a; }
   │       ┬  
   │       ╰── no `verify(...)` in this proto or in the functions it calls
   │       │  
   │       ╰── note: the verifier's job is to run the proto's `verify` checks; add at least one
───╯
