lang/tests/snapshots/semantic/type_alias_self_ref.snap
---
source: lang/tests/semantic.rs
---
error: no proto declaration found
   ╭─[ test.zippel:1:1 ]
   │
 1 │ type A = A;
   │ ─────┬─────  
   │      ╰─────── every file must contain exactly one proto declaration
   │      │       
   │      ╰─────── note: add a `proto` declaration to this file
───╯

---
error: circular type alias
   ╭─[ test.zippel:1:10 ]
   │
 1 │ type A = A;
   │          ┬  
   │          ╰── cycle: A → A
───╯
