lang/tests/snapshots/semantic/unbound_size_var_repeated.snap
---
source: lang/tests/semantic.rs
---
error: unbound size variable `N`
   ╭─[ test.zippel:1:35 ]
   │
 1 │ proto p<F: Field>(instance a: [F; N], instance b: [F; N]) where a == a { }
   │         │                         ┬                   ┬  
   │         │                         ╰────────────────────── `N` is not declared as a type variable
   │         │                                             │  
   │         │                                             ╰── `N` also used here
   │         │                                                
   │         ╰──────────────────────────────────────────────── help: add `N: Size` to the type variable list
───╯
