lang/tests/snapshots/semantic/undefined_variable.snap
---
source: lang/tests/semantic.rs
---
error: undefined variable `b`
   ╭─[ test.zippel:1:45 ]
   │
 1 │ proto p<F: Field>(instance a: F) where a == b { }
   │                   ──────┬──────             ┬  
   │                         │                   ╰── `b` is not defined in this scope
   │                         │                   │  
   │                         ╰────────────────────── `a` defined here
   │                                             │  
   │                                             ╰── help: did you mean `a`?
───╯
